--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.11.4",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "socket.io": "^3.0.4"
   }
 }
